Bz/portableCfg.cpp
/* Generated by re2c 0.13.7.5 on Sun May 08 21:12:32 2022 */

#include "stdafx.h"

typedef unsigned char uchar;
typedef unsigned int uint;

#define	YYCTYPE		uchar
#define	YYCURSOR	cursor
#define	YYLIMIT		s->lim
#define	YYMARKER	s->ptr

#define	RET(i)	{s->cur = cursor; return i;}
#define	RETT(i, typeid)	{s->cur = cursor; s->val.type = typeid; return i;}

typedef struct PassData
{
  union {
      int i;
      CString *str;
      COLORREF col;
  };
  uint		type;
} PassData;

typedef struct Scanner
{
    int			fd;
    uchar		*bot, *tok, *ptr, *cur, *pos, *lim, *top, *eof;
    uint		line;
    PassData val;
} Scanner;

enum {TYPE_CharSet=0, TYPE_AutoDetect, TYPE_ByteOrder, TYPE_FontName, TYPE_FontStyle, TYPE_FontSize, TYPE_FrameLeft, TYPE_FrameTop, TYPE_CmdShow, TYPE_FrameHeight, TYPE_FrameHeight2, TYPE_FrameWidth2, TYPE_SplitHPos, TYPE_SplitVPos, TYPE_SplitStruct, TYPE_StructView, TYPE_ComboHeight, TYPE_Language, TYPE_DetectMax, TYPE_BarState, TYPE_ReadOnly, TYPE_BmpWidth, TYPE_BmpZoom, TYPE_BmpPallet, TYPE_MaxOnMemory, TYPE_MaxMapSize, TYPE_TagAll, TYPE_SubCursor, TYPE_Colors, TYPE_MemberColumns2, TYPE_PageMargin, TYPE_DumpHeader, TYPE_DumpPage, TYPE_QWordAddr, TYPE_ClearUndoRedoWhenSave, TYPE_SyncScroll, TYPE_Grid, TYPE_BmpColorWidth, TYPE_InspectView, TYPE_AnalyzerView, TYPE_BmpAddressTooltip, TYPE_MiniToolbar, TYPE_lastPalletName, TYPE_LastSplitView, TYPE_PortableVersion};

static int g_cfgVer = 0;
static int g_numReadColors = 0;

void SetIntOption(uint type, int val)
{
  switch(type)
  {
case TYPE_CharSet: options.charset = (CharSet)val; break;
case TYPE_AutoDetect: options.bAutoDetect = val; break;
case TYPE_ByteOrder: options.bByteOrder = val; break;
case TYPE_FontStyle: options.fFontStyle = val; break;
case TYPE_FontSize: options.nFontSize = val; break;
case TYPE_FrameLeft: options.ptFrame.x = val; break;
case TYPE_FrameTop: options.ptFrame.y = val; break;
case TYPE_CmdShow: options.nCmdShow = val; break;
case TYPE_FrameHeight: options.cyFrame = val; break;
case TYPE_FrameHeight2: options.cyFrame2 = val; break;
case TYPE_FrameWidth2: options.cxFrame2 = val; break;
case TYPE_SplitHPos: options.xSplit = val; break;
case TYPE_SplitVPos: options.ySplit = val; break;
case TYPE_SplitStruct: options.xSplitStruct = val; break;
case TYPE_StructView: options.bStructView = val; break;
case TYPE_ComboHeight: options.nComboHeight = val; break;
case TYPE_Language: options.bLanguage = val; break;
case TYPE_DetectMax: options.dwDetectMax = val; break;
case TYPE_BarState: options.barState = val; break;
case TYPE_ReadOnly: options.bReadOnlyOpen = val; break;
case TYPE_BmpWidth: options.nBmpWidth = val; break;
case TYPE_BmpZoom: options.nBmpZoom = val; break;
case TYPE_BmpPallet: options.nBmpPallet = val; break;
case TYPE_MaxOnMemory: options.dwMaxOnMemory = val; break;
case TYPE_MaxMapSize: options.dwMaxMapSize = val; break;
case TYPE_TagAll: options.bTagAll = val; break;
case TYPE_SubCursor: options.bSubCursor = val; break;
case TYPE_DumpPage: options.nDumpPage = val; break;
case TYPE_QWordAddr: options.bQWordAddr = val; break;
case TYPE_ClearUndoRedoWhenSave: options.bClearUndoRedoWhenSave = val; break;
case TYPE_SyncScroll: options.bSyncScroll = val; break;
case TYPE_Grid: options.iGrid = val; break;
case TYPE_BmpColorWidth: options.nBmpColorWidth = val; break;
case TYPE_InspectView: options.bInspectView = val; break;
case TYPE_AnalyzerView: options.bAnalyzerView = val; break;
case TYPE_BmpAddressTooltip: options.bAddressTooltip = val; break;
case TYPE_MiniToolbar: options.bMiniToolbar = val; break;
case TYPE_LastSplitView: options.lastSplitView = val; break;
case TYPE_PortableVersion: g_cfgVer = val; break;
	}
}

void SetStrOption(uint type, CString *pVal)
{
  switch(type)
  {
case TYPE_FontName: options.sFontName = *pVal; break;
case TYPE_DumpHeader: options.sDumpHeader = *pVal; break;
case TYPE_lastPalletName: options.lastPalletName = *pVal; break;
	}
}

void SetColorArrOption(uint type, CAtlArray<COLORREF> *pVal)
{
  switch(type)
  {
		case TYPE_Colors:
		{
			COLORREF *col = &(options.colors[0][0]);
			int n = min(TCOLOR_COUNT*2, pVal->GetCount());
			for(int i=0;i < n;i++)
			{
			  col[i] = (*pVal)[i];
			}
			g_numReadColors = max(g_numReadColors, n);
			break;
		}
	}
}

void SetIntArrOption(uint type, CAtlArray<int> *pVal)
{
  switch(type)
  {
		case TYPE_MemberColumns2:
		{
			for(int i=0;i < MBRCOL2_MAX && i < pVal->GetCount();i++)
			{
			  options.colWidth2[i] = (*pVal)[i];
			}
			break;
		}
	}
}

void SetRectOption(uint type, int *pVal)
{
  switch(type)
  {
case TYPE_PageMargin: options.rMargin.left = pVal[0]; options.rMargin.top = pVal[1]; options.rMargin.right = pVal[2]; options.rMargin.bottom = pVal[3]; break;
	}
}

#include "PortableCfgParser.h"
#include "PortableCfgParser.c"


COLORREF ReadRGB(uchar *token)
{
  COLORREF c;
  DWORD r=0, g=0, b=0;
  _snscanf((const char *)token, 6, "%2x%2x%2x", &r, &g, &b);
  c = 0xFF000000 | (r&0xFF) | ((g&0xFF)<<8) | ((b&0xFF)<<16);
  ATLTRACE("ReadRGB: %08X\n", c);
  return c;
}
COLORREF ReadRGBOld(uchar *token)
{
  COLORREF c=0;
  _snscanf((const char *)token, 6, "%x", &c);
  c |= 0xFF000000;
  ATLTRACE("ReadRGBOld: %08X\n", c);
  return c;
}

COLORREF ReadRGBA(uchar *token)
{
  COLORREF c=0;
  DWORD a=0, g=0, b=0;
  _snscanf((const char *)token, 8, "%2x%2x%2x%2x", &c, &g, &b, &a);
  c &= 0xFF;
  c |= ((g&0xFF)<<8) | ((b&0xFF)<<16) | ((a&0xFF)<<24);
  ATLTRACE("ReadRGBA: %08X\n", c);
  return c;
}
COLORREF ReadRGBAOld(uchar *token)
{
  COLORREF c=0;
  _snscanf((const char *)token, 8, "%x", &c);
  ATLTRACE("ReadRGBAOld: %08X\n", c);
  return c;
}

CString ReadStr(uchar *token, uint len)
{
  CStringA tmpA;
  tmpA.SetString((const char *)token, len);
  CStringW tmpB = CA2W(tmpA, CP_UTF8);
  tmpB.Replace(L"%", L"%%");
  CString retStr;
  retStr.Format(tmpB);
  return retStr;
}

BOOL fill(int n) { return FALSE; }

int scan(Scanner *s){
	uchar *cursor = s->cur;
std:
	s->tok = cursor;



{
	YYCTYPE yych;
	unsigned int yyaccept = 0;

	if ((YYLIMIT - YYCURSOR) < 21) if(!fill(21)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\t':
	case ' ':	goto yy20;
	case '\n':	goto yy37;
	case '\v':
	case '\f':	goto yy36;
	case '\r':	goto yy39;
	case 0x1A:	goto yy34;
	case '"':	goto yy25;
	case '#':	goto yy24;
	case '+':
	case '-':	goto yy19;
	case ',':	goto yy32;
	case '/':	goto yy2;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy22;
	case '=':	goto yy26;
	case 'A':	goto yy6;
	case 'B':	goto yy7;
	case 'C':	goto yy5;
	case 'D':	goto yy11;
	case 'F':	goto yy8;
	case 'G':	goto yy16;
	case 'I':	goto yy17;
	case 'L':	goto yy10;
	case 'M':	goto yy13;
	case 'P':	goto yy4;
	case 'Q':	goto yy15;
	case 'R':	goto yy12;
	case 'S':	goto yy9;
	case 'T':	goto yy14;
	case 'l':	goto yy18;
	case '{':	goto yy28;
	case '}':	goto yy30;
	default:	goto yy40;
	}
yy2:
	++YYCURSOR;
	switch ((yych = *YYCURSOR)) {
	case '*':	goto yy471;
	case '/':	goto yy469;
	default:	goto yy3;
	}
yy3:
	{
    ATLTRACE("unexpected character: %c\n", *s->tok);
    goto std;
  }
yy4:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy444;
	case 'o':	goto yy445;
	default:	goto yy3;
	}
yy5:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'h':	goto yy396;
	case 'l':	goto yy393;
	case 'm':	goto yy395;
	case 'o':	goto yy394;
	default:	goto yy3;
	}
yy6:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'n':	goto yy371;
	case 'u':	goto yy372;
	default:	goto yy3;
	}
yy7:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy309;
	case 'm':	goto yy308;
	case 'y':	goto yy310;
	default:	goto yy3;
	}
yy8:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'o':	goto yy262;
	case 'r':	goto yy261;
	default:	goto yy3;
	}
yy9:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'p':	goto yy214;
	case 't':	goto yy213;
	case 'u':	goto yy212;
	case 'y':	goto yy211;
	default:	goto yy3;
	}
yy10:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy191;
	default:	goto yy3;
	}
yy11:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'e':	goto yy168;
	case 'u':	goto yy167;
	default:	goto yy3;
	}
yy12:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'e':	goto yy159;
	default:	goto yy3;
	}
yy13:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy117;
	case 'e':	goto yy116;
	case 'i':	goto yy115;
	default:	goto yy3;
	}
yy14:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy109;
	default:	goto yy3;
	}
yy15:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'W':	goto yy100;
	default:	goto yy3;
	}
yy16:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'r':	goto yy96;
	default:	goto yy3;
	}
yy17:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'n':	goto yy85;
	default:	goto yy3;
	}
yy18:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case 'a':	goto yy71;
	default:	goto yy3;
	}
yy19:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\t':
	case ' ':	goto yy69;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':	goto yy65;
	default:	goto yy3;
	}
yy20:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy68;
yy21:
	{ if(cursor == s->eof)RET(0); goto std; }
yy22:
	++YYCURSOR;
	yych = *YYCURSOR;
	goto yy66;
yy23:
	{ uchar *start = s->tok;
				bool bMinus = false;
				if(*start == '-')bMinus = true;
				while(*start<'0' || *start>'9')start++;
				CStringA tmp;
				tmp.SetString((const char *)(start), cursor - start);
				s->val.i = bMinus ? -atoi(tmp) : atoi(tmp);
				RET(INTVAL); }
yy24:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy55;
	default:	goto yy3;
	}
yy25:
	yyaccept = 0;
	yych = *(YYMARKER = ++YYCURSOR);
	switch (yych) {
	case '\n':	goto yy3;
	default:	goto yy45;
	}
yy26:
	++YYCURSOR;
	{ RET(EQ); }
yy28:
	++YYCURSOR;
	{ RET(BR1); }
yy30:
	++YYCURSOR;
	{ RET(BR2); }
yy32:
	++YYCURSOR;
	{ RET(COMMA); }
yy34:
	++YYCURSOR;
	{ RET(0);/*EOF*/ }
yy36:
	yych = *++YYCURSOR;
	goto yy43;
yy37:
	++YYCURSOR;
yy38:
	{
    if(cursor == s->eof)RET(0);
    s->pos = cursor; s->line++;
    goto std;
  }
yy39:
	yych = *++YYCURSOR;
	switch (yych) {
	case '\n':	goto yy41;
	default:	goto yy38;
	}
yy40:
	yych = *++YYCURSOR;
	goto yy3;
yy41:
	yych = *++YYCURSOR;
	goto yy38;
yy42:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy43:
	switch (yych) {
	case '\t':
	case '\v':
	case '\f':
	case ' ':	goto yy42;
	default:	goto yy21;
	}
yy44:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
yy45:
	switch (yych) {
	case '\n':	goto yy46;
	case '"':	goto yy48;
	case '\\':	goto yy47;
	default:	goto yy44;
	}
yy46:
	YYCURSOR = YYMARKER;
	if (yyaccept == 0) {
		goto yy3;
	} else {
		goto yy61;
	}
yy47:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '"':
	case '\'':
	case '?':
	case '\\':
	case 'a':
	case 'b':
	case 'f':
	case 'n':
	case 'r':
	case 't':
	case 'v':	goto yy44;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy51;
	case 'x':	goto yy50;
	default:	goto yy46;
	}
yy48:
	++YYCURSOR;
	{ s->val.str = new CString(); *(s->val.str) = ReadStr(s->tok + 1, cursor - s->tok -2); RET(STRVAL); }
yy50:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy53;
	default:	goto yy46;
	}
yy51:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy46;
	case '"':	goto yy48;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':	goto yy51;
	case '\\':	goto yy47;
	default:	goto yy44;
	}
yy53:
	++YYCURSOR;
	if (YYLIMIT <= YYCURSOR) if(!fill(1)) { return 0; }
	yych = *YYCURSOR;
	switch (yych) {
	case '\n':	goto yy46;
	case '"':	goto yy48;
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy53;
	case '\\':	goto yy47;
	default:	goto yy44;
	}
yy55:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy56;
	default:	goto yy46;
	}
yy56:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy57;
	default:	goto yy46;
	}
yy57:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy58;
	default:	goto yy46;
	}
yy58:
	yych = *++YYCURSOR;
	switch (yych) {
	case '0':
	case '1':
	case '2':
	case '3':
	case '4':
	case '5':
	case '6':
	case '7':
	case '8':
	case '9':
	case 'A':
	case 'B':
	case 'C':
	case 'D':
	case 'E':
	case 'F':
	case 'a':
	case 'b':
	case 'c':
	case 'd':
	case 'e':
	case 'f':	goto yy59;
	default:	goto yy46;
	}
yy59:
